# retroEd

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/editor/: editor.ts  markdown-toggle.ts  wysiwyg.ts
src/files/: fs.ts  store.ts
src/sound/: keyboard.ts
src/sound/samples/: README.md
src/styles/: classic-mac.css  crt.css
