[package]
name = "retro-proton"
version = "0.1.0"
description = "Retro Markdown word processor for macOS"
authors = []
license = "MIT"
repository = "https://github.com/wblatta/retroEd"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "retroproton_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
